--- a/templates/login/base.html
+++ b/templates/login/base.html
@@ -26,9 +26,10 @@
     </div>
 
     <!-- Login Form -->
-    <form>
+    <form method="post" action="http://localhost:8000/login_user">
+      {% csrf_token %}
       <input type="text" id="login" class="fadeIn second" name="login" placeholder="login">
-      <input type="text" id="password" class="fadeIn third" name="login" placeholder="password">
+      <input type="text" id="password" class="fadeIn third" name="password" placeholder="password">
       <input type="submit" class="fadeIn fourth" value="Log In">
     </form>
 
