--- a/templates/home/base.html
+++ b/templates/home/base.html
@@ -56,7 +56,7 @@
                 class="nav-link active display-3"
                 style="font-size: 20px"
                 aria-current="page"
-                href="#"
+                href="http://localhost:8000/home"
                 ><b>Home</b></a
               >
             </li>
