--- a/templates/home/base.html
+++ b/templates/home/base.html
@@ -80,7 +80,7 @@
                 <li><a class="dropdown-item" href="#">Post a photo</a></li>
                 <li><hr class="dropdown-divider" /></li>
                 <li>
-                  <a class="dropdown-item" href="#">Something else here</a>
+                  <a class="dropdown-item" href="http://localhost:8000/home/logout">Logout</a>
                 </li>
               </ul>
             </li>
