--- a/templates/home/home.html
+++ b/templates/home/home.html
@@ -24,7 +24,7 @@
       </div>
     </div>
     <img
-      src="{{i.image_url}}"
+      src="http://localhost:8000/media/{{i.image_url}}"
       style="height: {{i.image_url.height}}px"
       class="card-img-top rounded-0"
       alt="..."
