--- a/templates/home/add_post_1.html
+++ b/templates/home/add_post_1.html
@@ -16,7 +16,7 @@
         </div>
         {% comment %} <button type="submit" style="margin-left:120px">Upload</button>  {% endcomment %}
         <div style="padding-left:120px" class="mt-3">
-        <button type="submit"  class="btn btn-info">Submit</button>
+        <button type="submit"  class="btn cust_but">Post it</button>
         </div>
     </form> 
     
