--- a/static/login/css/login.css
+++ b/static/login/css/login.css
@@ -1,12 +1,12 @@
 @import url('https://fonts.googleapis.com/css?family=Poppins');
 
 body{
-  background-image: linear-gradient(to right, #fbad50, #b665e6);
+  background-image: linear-gradient(135deg,#405DE6,#5851DB,#833AB4,#c13584,#e1306c,#fd1d1d);
 }
 /* BASIC */
 
 html {
-  background-color: linear-gradient(to right, #fbad50, #b665e6);
+  background-color: linear-gradient(to right,  #FFDC80,#FCAF45,#F56040,#E1306C, #C13584,#833AB4);
 }
 
 body {
@@ -28,7 +28,17 @@ h2 {
   text-transform: uppercase;
   display:inline-block;
   margin: 40px 8px 10px 8px; 
-  color: #fbad50;
+  color: #9717e2;
+}
+h3 {
+  text-align: center;
+  font-size: 16px;
+  font-weight: 600;
+  text-transform: uppercase;
+  display:inline-block;
+  margin: 40px 8px 10px 8px; 
+  border-bottom:#9717e2 ;
+  color: #9717e2;
 }
 
 
@@ -78,7 +88,7 @@ h2.inactive {
 
 h2.active {
   color: #0d0d0d;
-  border-bottom: 2px solid #fbad50;
+  border-bottom: 2px solid #c13584;
   
 }
 
@@ -87,7 +97,7 @@ h2.active {
 /* FORM TYPOGRAPHY*/
 
 input[type=button], input[type=submit], input[type=reset]  {
-  background-image: linear-gradient(to right, #fbad50, #b665e6);
+  background-image: linear-gradient(135deg ,#405DE6,#5851DB,#833AB4,#c13584,#e1306c,#fd1d1d);
   border: none;
   color: white;
   padding: 15px 80px;
@@ -95,7 +105,7 @@ input[type=button], input[type=submit], input[type=reset]  {
   text-decoration: none;
   display: inline-block;
   text-transform: uppercase;
-  font-size: 13px;
+  font-size: 15px;
   -webkit-box-shadow: 0 10px 30px 0 rgba(236, 178, 44, 0.4);
   box-shadow: 0 10px 30px 0 rgba(95,186,233,0.4);
   -webkit-border-radius: 5px 5px 5px 5px;
@@ -109,7 +119,7 @@ input[type=button], input[type=submit], input[type=reset]  {
 }
 
 input[type=button]:hover, input[type=submit]:hover, input[type=reset]:hover  {
-  background-color: #fbad50;
+  background-color: #94fb50;
 }
 
 input[type=button]:active, input[type=submit]:active, input[type=reset]:active  {
@@ -142,8 +152,8 @@ input[type=text] {
 }
 
 input[type=text]:focus {
-  background-color: #fff;
-  border-bottom: 2px solid #fbad50;
+  background-color: rgb(240, 230, 230);
+  border-bottom: 2px solid #c13584;
 }
 
 input[type=text]:placeholder {
