--- a/templates/home/base.html
+++ b/templates/home/base.html
@@ -29,12 +29,12 @@
     </head>
 
     <nav
-      class="fixed navbar nav1  navbar-expand-lg navbar-light bg-light"
+      class="fixed navbar nav1 sticky-top navbar-expand-lg navbar-light bg-light"
     >
       <div class="container-fluid navi">
-        <a class="navbar-brand" href="#"
+        <a class="navbar-brand" href="http://localhost:8000/home"
           ><p class="display-3" style="font-size: 30px; margin: 10px">
-            <b>SocialHub</b>
+            <b style="color: aliceblue;">SocialHub</b>
           </p>
           <p></p
         ></a>
@@ -57,11 +57,11 @@
                 style="font-size: 20px"
                 aria-current="page"
                 href="http://localhost:8000/home"
-                ><b>Home</b></a
+                ><b style="color: aliceblue;">Home</b></a
               >
             </li>
-          <li class="nav-item display-3  mx-3" style="font-size:20px">
-          <a class="nav-link active" href="home/add_post/"><b>Post</b></a>
+          <li class="nav-item display-3  mx-3" style="font-size:20px;">
+          <a class="nav-link active" href="home/add_post/"><b style="color: aliceblue;">Post</b></a>
           </li>
             <li class="nav-item dropdown active">
               <a
@@ -71,9 +71,9 @@
                 role="button"
                 data-toggle="dropdown"
                 aria-expanded="false"
-                style="font-size: 20px"
+                style="font-size: 20px;color: aliceblue;;"
               >
-                <div id="usnm"><b>{% block user_name %}{% endblock user_name %}</b></div>
+                <div id="usnm"><b style="color: aliceblue;">{% block user_name %}{% endblock user_name %}</b></div>
               </a>
               <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
                 <li><a class="dropdown-item" style="" href="http://localhost:8000/home/profile">Profile</a></li>
@@ -84,21 +84,17 @@
                 </li>
               </ul>
             </li>
+            <li class="mt-1 mx-3" style="padding-left:750px;">
+              <a href="#" style="color: aliceblue;text-decoration: none;">
+              <div style="border: 2px solid white; border-radius: 20px;"><div style="padding-top: 5px;padding-left: 10px;padding-bottom: 5px;padding-right: 20px;"><b style="font-size: 18px;">Search</b>
+                <i class="fa fa-search mx-3"  aria-hidden="true"></i>
+                </div>
+                
+              </div>
+            </a>
+              </li>
           </ul>
-          <form class="d-flex">
-            <input
-              class="form-control mr-2 rounded-pill"
-              type="search"
-              placeholder="Search"
-              aria-label="Search"
-            />
-            <button
-              class="btn btn-outline rounded-pill sub-button"
-              type="submit"
-            >
-              Search
-            </button>
-          </form>
+          
         </div>
       </div>
     </nav>
@@ -106,8 +102,8 @@
     <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
 
     <div class="row">
-      <div class="col-3">{% block ads %} {% endblock ads %}</div>
-      <div class="col-7" style="padding-left: 50px; padding-right: 50px">
+      <div class="col-2">{% block ads %} {% endblock ads %}</div>
+      <div class="col-8" style="padding-left: 50px; padding-right: 50px">
         {% block feed %} {% endblock feed %}
       </div>
       <div class="col-2">{% block sugg %} {% endblock sugg %}</div>
