--- a/templates/login/base.html
+++ b/templates/login/base.html
@@ -17,14 +17,15 @@
     <div class="wrapper fadeInDown">
   <div id="formContent">
     <!-- Tabs Titles -->
-    <h2 class="active"> Sign In to SocialHub</h2>
+    <h3 class="mt-3" >SocialHub</h3>
+    
     
 
     <!-- Icon -->
     <div class="fadeIn first">
-      <i class="fas fa-users fa-7x" ></i>
+      <i class="fa fa-instagram fa-7x" style="color: #c13584;" ></i>
     </div>
-
+    <h2 class="active"> Sign In </h2>
     <!-- Login Form -->
     <form method="post" action="http://localhost:8000/login_user">
       {% csrf_token %}
