--- a/templates/home/add_post_1.html
+++ b/templates/home/add_post_1.html
@@ -1,4 +1,6 @@
 {% extends 'home/base.html' %}
+{% block title %}Add Post
+{% endblock title %}
 <h1>JENIL GANDHI</h1>
 {% block user_name %} {{user.get_username}} {% endblock user_name %}
 {% block feed %}
