--- a/templates/home/home.html
+++ b/templates/home/home.html
@@ -97,3 +97,5 @@
   
 </div>
 {% endblock feed %} {% block user_name %} {{name}} {% endblock user_name %}
+{% block title %}Home
+{% endblock title %}
