--- a/templates/search/search.html
+++ b/templates/search/search.html
@@ -1,14 +1,17 @@
-
 {% extends 'home/base.html' %}
 {% load static %}
 {% block user_name %} {{user.get_username}} {% endblock user_name %}
-
+{% block title %}Search
+{% endblock title %}
 {% block feed %}
 <div class="container mt-3">
 <h1 class="gradient-text">Search</h1>
 <div class="form-floating mb-3 ">
-  <input type="email" class="form-control " id="floatingInput" placeholder="Search the world">
-  <label for="floatingInput"  class="gradient-text">Search by username or id</label>
+<form method="post" action="http://localhost:8000/search/search_query">
+  {% csrf_token %}
+  <input type="text" name="search_query" class="form-control " id="search_query" placeholder="Search the world">
+  <label for="floatingInput" name="search_query" class="gradient-text">Search by username or id</label>
+</form>
 </div>
 </div>
 {% endblock feed %}
