--- a/templates/login/base.html
+++ b/templates/login/base.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/5.0.0-alpha2/css/bootstrap.min.css" integrity="sha384-DhY6onE6f3zzKbjUPRc2hOzGAdEf4/Dz+WJwBvEYL/lkkIsI3ihufq9hk9K4lVoK" crossorigin="anonymous">
     
     <link rel="stylesheet" href="{% static 'login/css/login.css' %}">
-    <title>Hello, world!</title>
+    <title>SocialHub</title>
   </head>
   <body>
     <div class="wrapper fadeInDown">
