--- a/templates/login/signup.html
+++ b/templates/login/signup.html
@@ -17,29 +17,36 @@
     <div class="wrapper fadeInDown">
   <div id="formContent">
     <!-- Tabs Titles -->
-    <h3 class="mt-3" >SocialHub</h3>
-    <br>
+    
     
 
     <!-- Icon -->
     
-    <h2 class="active"> Sign In </h2>
+    <h2 class="active"> Sign Up </h2>
     <!-- Login Form -->
-    <form method="post" action="http://localhost:8000/login_user">
+    <form method="post" action="http://localhost:8000/signup">
       {% csrf_token %}
-      <input type="text" id="login" class="fadeIn second" name="login" placeholder="login">
-      <input type="text" id="password" class="fadeIn third" name="password" placeholder="password">
-      <input type="submit" class="fadeIn fourth" value="Log In">
+      {% if messages %} {% for msg in messages %} <div class="alert alert-danger" role="alert">
+  <b> {{ msg }} </b>
+</div> {% endfor %}{% endif %}
+      <input type="text" id="login" class="fadeIn second" name="username" placeholder="User Name">
+      <input type="text" id="login" class="fadeIn second" name="city" placeholder="City">
+      <input type="text" id="login" class="fadeIn second" name="country" placeholder="Country">
+      <input type="text" id="login" class="fadeIn second" name="bio" placeholder="Bio">
+      <input type="text" id="password" class="fadeIn third" name="password" placeholder="Password">
+      <input type="text" id="password" class="fadeIn third" name="c_password" placeholder="Confirm Password">
+      <input type="submit" class="fadeIn fourth" value="Sign Up">
     </form>
+
+    {% comment %} country, bio,city, image {% endcomment %}
+
 
     <!-- Remind Passowrd -->
     
     <div id="formFooter">
-      <a class="underlineHover signup" href="{% url 'signup' %}"> <b>SIGN UP</b></a>
+      <a class="underlineHover signup" href="{% url 'login' %}"> <b>SIGN IN</b></a>
     </div>
-    <div id="formFooter">
-      <a class="underlineHover" href="#">Forgot Password?</a>
-    </div>
+    
 
   </div>
 </div>
