--- a/templates/home/base.html
+++ b/templates/home/base.html
@@ -65,6 +65,15 @@
           <li class="nav-item display-3  mx-3" style="font-size:20px;">
           <a class="nav-link active" href="home/add_post/"><b style="color: aliceblue;">Post</b></a>
           </li>
+          <li class="nav-item">
+              <a
+                class="nav-link active display-3"
+                style="font-size: 20px"
+                aria-current="page"
+                href="http://localhost:8000/chat"
+                ><b style="color: aliceblue;padding-right:5px">Chat</b></a
+              >
+            </li>
             <li class="nav-item dropdown active">
               <a
                 class="nav-link dropdown-toggle display-3"
@@ -86,7 +95,7 @@
                 </li>
               </ul>
             </li>
-            <li class="mt-1 mx-3" style="padding-left:650px;">
+            <li class="mt-1 mx-3" style="padding-left:620px;">
               <a href="http://localhost:8000/search" style="color: aliceblue;text-decoration: none;">
               <div style="border: 2px solid white; border-radius: 20px;"><div style="padding-top: 5px;padding-left: 10px;padding-bottom: 5px;padding-right: 20px;"><b style="font-size: 18px;">Search</b>
                 <i class="fa fa-search mx-3"  aria-hidden="true"></i>
