--- a/static/search/css/search.css
+++ b/static/search/css/search.css
@@ -1,10 +1,24 @@
 .gradient-text {
-    background-image: linear-gradient(45deg,#d617e7,#5851DB,#833AB4,#c13584,#e02765,#d44fe0);
-    background-size: 100%;
-    background-repeat: repeat;
-    -webkit-background-clip: text;
-    -webkit-text-fill-color: transparent; 
-  }
-.search_bar{
+  background-image: linear-gradient(45deg, #d617e7, #5851DB, #833AB4, #c13584, #e02765, #d44fe0);
+  background-size: 100%;
+  background-repeat: repeat;
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+}
+
+.search_bar {
   border: 3px solid red;
+}
+
+.user_img {
+  width: 60px;
+  height: 60px;
+  border: 1px solid black;
+  border-radius: 50%;
+  object-fit: cover;
+}
+
+.custom_text {
+  font-size: 20px;
+  padding-left: 20px
 }
